--- a/core/locale/it.po
+++ b/core/locale/it.po
@@ -7,13 +7,13 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2009-06-22 07:41+0200\n"
+"PO-Revision-Date: 2009-06-25 08:24+0200\n"
 "Last-Translator: Antenore Gatta <antenore@gmail.com>\n"
 "Language-Team: <it@li.org>\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: it\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 1.2.1\n"
 
@@ -63,9 +63,8 @@ msgid "%1 - just for me"
 msgstr "%1 - solo per me"
 
 #: TopicUserMappingContrib/data/System/NewUserTemplate.txt:67
-#, fuzzy
 msgid "%1 - starting points on Foswiki"
-msgstr "%1 - punti di partenza Foswiki"
+msgstr "%1 - punti di partenza in Foswiki"
 
 #: TopicUserMappingContrib/data/System/NewUserTemplate.txt:69
 msgid "%1 - try out Foswiki on your own"
@@ -178,7 +177,6 @@ msgid "%1 topic does not exist"
 msgstr "%1 la pagina non esiste"
 
 #: core/templates/registerfailedremoved.tmpl:12
-#, fuzzy
 msgid "%1 tried to register with e-mail %2"
 msgstr "%1 è stato registrato con e-mail %2"
 
@@ -207,7 +205,6 @@ msgid "(%1 login)"
 msgstr "(%1 login)"
 
 #: core/templates/validate.tmpl:6
-#, fuzzy
 msgid "(%1 validation)"
 msgstr "(%1 login)"
 
@@ -567,7 +564,6 @@ msgstr "Accesso controllato su %1 fallito"
 #: PatternSkin/templates/edit.pattern.tmpl:53
 #: PatternSkin/templates/preview.pattern.tmpl:22
 #: PatternSkin/templates/settings.pattern.tmpl:25
-#, fuzzy
 msgid "Access keys"
 msgstr "Tasto di accesso"
 
@@ -642,7 +638,6 @@ msgid "Allow non <nop>WikiWord for the new topic name"
 msgstr "Permetti non<nop>WikiWord come nome della nuova pagina"
 
 #: core/templates/messages.tmpl:267
-#, fuzzy
 msgid ""
 "Alternatively hit back to go back to %SYSTEMWEB%.UserRegistration and choose "
 "a different username."
@@ -994,13 +989,12 @@ msgid "Confirm rename or move"
 msgstr "Conferma rinomina o sposta"
 
 #: core/templates/messages.tmpl:31
-#, fuzzy
 msgid ""
 "Confirm your changes using Foswiki's [[%1][topic history comparison tool "
 "(diff)]]."
 msgstr ""
-"Conferma le modifiche usando lo [[%1][strumento TWiki per il confronto delle "
-"versioni della pagina]]."
+"Conferma le modifiche usando lo [[%1][strumento Foswiki per il confronto "
+"delle versioni della pagina]]."
 
 #: core/templates/oopsleaseconflict.tmpl:6
 msgid "Conflict"
@@ -1028,9 +1022,8 @@ msgid ""
 msgstr ""
 
 #: core/templates/oopsmore.tmpl:19 core/templates/oopsmore.tmpl:22
-#, fuzzy
 msgid "Copy topic"
-msgstr "Alla pagina:"
+msgstr "Copia la pagina:"
 
 #: core/data/System/DefaultPreferences.txt:42
 msgid ""
@@ -1189,6 +1182,8 @@ msgid ""
 "Did you spell the topic name correctly? Remember, a topic name is case "
 "sensitive."
 msgstr ""
+"Hai scritto il nome della pagina correttamente? Ricorda, il nome di una "
+"pagina è case sensitive."
 
 #: core/data/System/VarMAKETEXT.txt:19
 msgid "Did you want to [[%1][reset %2's password]]?"
@@ -1279,9 +1274,8 @@ msgid "Edit personal data"
 msgstr "Edit dati personali"
 
 #: core/templates/oopsmore.tmpl:14
-#, fuzzy
 msgid "Edit settings for this topic"
-msgstr "<a href='%1' rel='nofollow'>Edit preferenze</a> per questa pagina"
+msgstr "Modifica preferenze per questa pagina"
 
 #: PatternSkin/data/Main/PatternSkinUserViewTemplate.txt:10
 msgid "Edit text"
@@ -1316,9 +1310,8 @@ msgstr ""
 "è vuoto. Non puoi fare lúpload di un file vuoto."
 
 #: core/lib/Foswiki/UI/Register.pm:422 core/lib/Foswiki/UI/Register.pm:461
-#, fuzzy
 msgid "Email has been disabled for this Foswiki installation"
-msgstr "L'email è stata disabilitata in questa installazione TWiki"
+msgstr "L'email è stata disabilitata in questa installazione Foswiki"
 
 #: PatternSkin/templates/foswiki.pattern.tmpl:77
 msgid "Enlarge edit box"
@@ -1420,53 +1413,47 @@ msgid "Form definition missing"
 msgstr "Manca la definizione del form"
 
 #: core/templates/login.tmpl:3
-#, fuzzy
 msgid "Foswiki User Authentication"
-msgstr "Autenticazione utente TWiki"
+msgstr "Autenticazione utente Foswiki"
 
 #: core/templates/mailresetpassword.tmpl:3
-#, fuzzy
 msgid "Foswiki password reset for %1"
-msgstr "Reset TWiki password per %1"
+msgstr "Reset Foswiki password per %1"
 
 #: core/templates/oopschangelanguage.tmpl:12
-#, fuzzy
 msgid ""
 "Foswiki's user interface is available in several languages. If you want to "
 "change the language for this session, choose one of the following and hit "
 "\"Change language\". Otherwise, follow the \"Cancel\" link on the bottom of "
 "the page to return to the previous topic."
 msgstr ""
-"L'interfaccai utente TWiki è disponibile in diverse lingue. Se vuoi cambiare "
-"la lingua per questa sessione scegli una delle seguenti e premi \"Cambia "
-"lingua\". Altrimenti il link \"Rinuncia\" in fondo alla pagina per ritornare "
-"alla pagina precedente."
+"L'interfaccai utente Foswiki è disponibile in diverse lingue. Se vuoi "
+"cambiare la lingua per questa sessione scegli una delle seguenti e premi "
+"\"Cambia lingua\". Altrimenti il link \"Rinuncia\" in fondo alla pagina per "
+"ritornare alla pagina precedente."
 
 #: core/templates/settings.tmpl:25
-#, fuzzy
 msgid ""
 "Get help on <a target='Macros' class='foswikiPopUp' href='%1' "
 "rel='nofollow'>Setting topic preferences</a>."
 msgstr ""
-"Aiuto su <a target='Macros' class='twikiPopUp' href='%1' "
+"Aiuto su <a target='Macros' class='foswikiPopUp' href='%1' "
 "rel='nofollow'>Defininire i parametri di pagina</a>."
 
 #: core/templates/renamebase.tmpl:65
-#, fuzzy
 msgid ""
 "Get help on <a target='ManagingTopics' class='foswikiPopUp' href='%1' "
 "rel='nofollow'>Renaming and moving topics</a>."
 msgstr ""
-"Aiuto su <a target='ManagingTopics' class='twikiPopUp' href='%1' "
+"Aiuto su <a target='ManagingTopics' class='foswikiPopUp' href='%1' "
 "rel='nofollow'>Rinominare e spostare pagine</a>."
 
 #: core/templates/renamewebbase.tmpl:49
-#, fuzzy
 msgid ""
 "Get help on <a target='ManagingWebs' class='foswikiPopUp' href='%1' "
 "rel='nofollow'>Renaming and moving webs</a>."
 msgstr ""
-"Aiuto su <a target='ManagingWebs' class='twikiPopUp' href='%1' "
+"Aiuto su <a target='ManagingWebs' class='foswikiPopUp' href='%1' "
 "rel='nofollow'>Rinominare e spostare webs</a>."
 
 #: core/data/System/WebSearch.txt:5 core/data/System/WebSearchAdvanced.txt:5
@@ -1534,6 +1521,9 @@ msgid ""
 "may be a fraudulent registration.  The user '%1' could not be removed "
 "automatically."
 msgstr ""
+"Comunque, l'invio dell'email di conferma a %2 è fallito, suggerendoci che "
+"questa potrebbe essere una registrazione fraudolenta.  L'utente '%1' non "
+"potrebbe essere rimosso automaticamente."
 
 #: core/templates/registerfailedremoved.tmpl:14
 msgid ""
@@ -1541,12 +1531,16 @@ msgid ""
 "maye be a fraudulent registration.  The user '%1' was removed automatically. "
 "However you may have to remove the user's personal topic manually."
 msgstr ""
+"Comunque, l'invio dell'email di conferma a %2 è fallito, suggerendoci che "
+"questa potrebbe essere una registrazione fraudolenta.  L'utente '%1' è stato "
+"rimosso automaticamente. ad ogni modo, devi rimuovere la pagina personale "
+"dell'utente manualmente."
 
 #: core/templates/messages.tmpl:360
 msgid ""
 "However, the filename has been changed from %1 to %2. Please make a note of "
 "it."
-msgstr "Comunque il nome del file è stato camiato da %1 a %2. Ricordatelo."
+msgstr "Comunque il nome del file è stato cambiato da %1 a %2. Ricordatelo."
 
 #: core/templates/login.tmpl:65
 msgid "I forgot my password"
@@ -1576,17 +1570,16 @@ msgstr ""
 "cima"
 
 #: core/templates/messages.tmpl:429
-#, fuzzy
 msgid ""
 "If you are developing a Foswiki application, see %1 for a description of the "
 "correct parameters."
 msgstr ""
-"se stai sviluppando una Applicazione TWiki, vedi %1 per la descrizione dei "
+"se stai sviluppando una Applicazione Foswiki, vedi %1 per la descrizione dei "
 "parametri corretti."
 
 #: core/templates/validate.tmpl:25
 msgid "If you are unsure what this means, read:"
-msgstr ""
+msgstr "Se non sei sicuro cosa questo significhi leggi:"
 
 #: core/templates/messages.tmpl:495
 msgid "If you came here by clicking on a question mark link"
@@ -1675,13 +1668,12 @@ msgid "In reversed order"
 msgstr "In ordine inverso"
 
 #: core/templates/messages.tmpl:363
-#, fuzzy
 msgid ""
 "In some cases, Foswiki changes the name of the uploaded file to make it safe "
 "and accessible across all platforms:"
 msgstr ""
-"In qualche caso, TWiki cambia il nome del caricato per renderlo sicuro e "
-"accessibile da tutte le piattaforme:"
+"In qualche caso, Foswiki cambia il nome del file caricato per renderlo "
+"sicuro e accessibile da tutte le piattaforme:"
 
 #: core/templates/messages.tmpl:272 core/templates/messages.tmpl:279
 msgid "Incorrect %1"
@@ -1739,18 +1731,17 @@ msgstr ""
 "gestiti, per cui in questo caso ti raccomando di controllare con  %1."
 
 #: core/templates/foswiki.tmpl:9
-#, fuzzy
 msgid ""
 "It's usually best to choose a <a target='WikiWord' class='foswikiPopUp' "
 "href='%1' rel='nofollow'>WikiWord</a> for the new topic name, otherwise "
 "automatic linking may not work. Characters not allowed in topic names, such "
 "as spaces will automatically be removed."
 msgstr ""
-"Normalmente è meglio scegliere una  <a target='WikiWord' class='twikiPopUp' "
-"href='%1' rel='nofollow'>WikiWord</a> come nome della nuova pagina, "
-"altrimenti il collegamento automatico potrebbe non funzionare. I caratteri "
-"non permessi nel nome della pagina, come gli spazi, saranno rimossi "
-"automaticamente."
+"Normalmente è meglio scegliere una  <a target='WikiWord' "
+"class='foswikiPopUp' href='%1' rel='nofollow'>WikiWord</a> come nome della "
+"nuova pagina, altrimenti il collegamento automatico potrebbe non funzionare. "
+"I caratteri non permessi nel nome della pagina, come gli spazi, saranno "
+"rimossi automaticamente."
 
 #: core/templates/renameweb.tmpl:16
 msgid ""
@@ -1809,7 +1800,6 @@ msgid "List topics that start with the letter:"
 msgstr "Lista le pagine che iniziano con la lettera:"
 
 #: core/data/System/WebSearchAdvanced.txt:60
-#, fuzzy
 msgid "Literal search"
 msgstr "Ricerca semplice"
 
@@ -1913,18 +1903,16 @@ msgid "NEW"
 msgstr "NUOVO"
 
 #: core/templates/oopsmore.tmpl:22
-#, fuzzy
 msgid "Name of copy:"
-msgstr "Numero delle pagine:"
+msgstr "Nome della copia:"
 
 #: core/templates/messages.tmpl:111
 msgid "Name of new web is missing"
 msgstr "Manca il nome del nuovo web"
 
 #: core/data/System/TopicDoesNotExistViewTemplate.txt:8
-#, fuzzy
 msgid "Navigate to a similar topic"
-msgstr "Desideri raggiungere velocemente verso una pagina simile?"
+msgstr "Vai ad una pagina similare?"
 
 #: core/templates/messages.tmpl:153
 msgid "New User Registration disabled"
@@ -2004,9 +1992,8 @@ msgid "Notes:"
 msgstr "Annotazioni:"
 
 #: core/data/System/WebChangesAlert.txt:2
-#, fuzzy
 msgid "Notification help"
-msgstr "Notifiche"
+msgstr "Notifica di aiuto."
 
 #: PatternSkin/data/Main/WebLeftBarExample.txt:9
 #: PatternSkin/data/Sandbox/WebLeftBarExample.txt:9
@@ -2190,11 +2177,11 @@ msgstr "Preferenze per"
 
 #: core/templates/validate.tmpl:23
 msgid "Press Cancel otherwise."
-msgstr ""
+msgstr "Altrimenti premi Rinuncia."
 
 #: core/templates/validate.tmpl:22
 msgid "Press OK to confirm that this change was intentional."
-msgstr ""
+msgstr "Premi OK per confermare che questa modifica era intenzionale."
 
 #: core/lib/Foswiki/OopsException.pm:42
 msgid "Problem filling bath"
@@ -2205,9 +2192,8 @@ msgid "Properties"
 msgstr "Proprietà"
 
 #: core/data/System/WebSearchAdvanced.txt:62
-#, fuzzy
 msgid "Query Search"
-msgstr "Cerca Web"
+msgstr "Cerca Query"
 
 #: core/data/Main/SitePreferences.txt:7
 msgid ""
