--- a/core/locale/ru.po
+++ b/core/locale/ru.po
@@ -10,13 +10,17 @@ msgstr ""
 "Project-Id-Version: ru $Id\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2009-06-25 01:30+0400\n"
-"Last-Translator: Andrew Pantyukhin <infofarmer@FreeBSD.org>\n"
+"PO-Revision-Date: 2009-06-28 12:14+0200\n"
+"Last-Translator: Ivan Pesin <sp_ipesin@n-ix.com.ua>\n"
 "Language-Team: Russian Team <svz@latex.pereslavl.ru, falko-mail@inbox.ru, "
 "jsinx@front.ru, alex@amibel.ru, infofarmer@FreeBSD.org>\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Pootle 1.2.1\n"
 
 #. ($days)
 #: core/lib/Foswiki/Time.pm:450
@@ -605,11 +609,11 @@ msgstr "Администрирование"
 
 #: core/data/System/WebSearchAdvanced.txt:3
 msgid "Advanced Search"
-msgstr "Расширенный писк"
+msgstr "Расширенный поиск"
 
 #: core/data/System/WebSearch.txt:25
 msgid "Advanced search"
-msgstr "Расширенный писк"
+msgstr "Расширенный поиск"
 
 #: TopicUserMappingContrib/data/System/ChangeEmailAddress.txt:20
 msgid ""
