--- a/core/locale/cs.po
+++ b/core/locale/cs.po
@@ -6,13 +6,13 @@ msgstr ""
 "Project-Id-Version: Foswiki $Id\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2009-06-22 19:36+0200\n"
+"PO-Revision-Date: 2009-06-30 17:11+0200\n"
 "Last-Translator: Milan Mašek <milan.m.masek@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: cs\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 "X-Generator: Pootle 1.2.1\n"
 
@@ -40,12 +40,12 @@ msgstr "%*(%1,sekund) "
 #: core/templates/oopsgeneric.tmpl:16 core/templates/oopsgeneric.tmpl:18
 #: core/templates/oopsgeneric.tmpl:7
 msgid "%1"
-msgstr ""
+msgstr "%1"
 
 #: core/templates/registerfailednotremoved.tmpl:3
 #: core/templates/registerfailedremoved.tmpl:3
 msgid "%1 - Registration failure for %2 (%3)"
-msgstr "%1 - Registrace selhala %2 (%3)"
+msgstr "%1 - Registrace selhala z důvodu %2 (%3)"
 
 #: TopicUserMappingContrib/data/System/ManagingUsers.txt:116
 #: core/templates/registernotify.tmpl:3
@@ -2640,7 +2640,7 @@ msgstr ""
 
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:5
 msgid "Sorry, Registration has been temporarily disabled"
-msgstr ""
+msgstr "Omlouváme se, registrování je dočasně mimo provoz."
 
 #: TopicUserMappingContrib/data/System/BulkRegistration.txt:83
 #: TopicUserMappingContrib/data/System/BulkResetPassword.txt:17
@@ -2649,6 +2649,8 @@ msgstr ""
 #: TopicUserMappingContrib/data/System/ResetPassword.txt:16
 msgid "Sorry, the password system is currently read only, please contact %1"
 msgstr ""
+"Omlouváme se, systém pro správu hesel je v současnosti pouze pro čtení. "
+"Prosím kontaktujte %1."
 
 #: core/data/System/WebSearchAdvanced.txt:46
 msgid "Sort results by:"
@@ -2691,7 +2693,7 @@ msgstr "Shrnutí"
 
 #: PatternSkin/templates/foswiki.pattern.tmpl:77
 msgid "Switch to monotype or propotional font"
-msgstr ""
+msgstr "Použijte monotype nebo proporcionální font."
 
 #: core/data/System/WebSearch.txt:26 core/data/System/WebSearchAdvanced.txt:32
 msgid ""
@@ -2702,9 +2704,8 @@ msgstr ""
 "literal =\"web service\"=, ale ne =\"shampoo\"=, napište:"
 
 #: core/templates/messages.tmpl:515
-#, fuzzy
 msgid "Template %1 does not exist"
-msgstr "Web %1 neexistuje"
+msgstr "Šablona %1 neexistuje"
 
 #: core/data/Sandbox/WebHome.txt:6
 msgid "Test Topics"
@@ -2736,7 +2737,7 @@ msgstr ""
 
 #: core/templates/messages.tmpl:533
 msgid "That user has already been activated "
-msgstr ""
+msgstr "Konto tohoto uživatele již bylo aktivováno."
 
 #: core/templates/messages.tmpl:280
 msgid ""
@@ -2748,7 +2749,7 @@ msgstr ""
 
 #: core/templates/messages.tmpl:274
 msgid "The %1 field must match the {LoginNameFilterIn} filter for this site"
-msgstr ""
+msgstr "Pole %1 musí souhlasit s filtrem {LoginNameFilterIn} pro tuto site."
 
 #: core/templates/messages.tmpl:68
 msgid "The %1 topic already exists"
@@ -2775,19 +2776,19 @@ msgstr ""
 #: core/data/Trash/WebRss.txt:5 core/data/_default/WebAtom.txt:3
 #: core/data/_default/WebRss.txt:5
 msgid "The %1 web of Foswiki, the Free and Open Source Wiki."
-msgstr ""
+msgstr "Web %1 je webem Foswiki - wiki dostupné zdarma a jako Open Source."
 
 #: core/data/Sandbox/WebRss.txt:5
 msgid "The %1 web of Foswiki. Foswiki is the Free and Open Source Wiki."
-msgstr ""
+msgstr "Web %1 je webem Foswiki. Foswiki je dostupná zdarma a jako Open Source."
 
 #: core/templates/messages.tmpl:421
 msgid "The =%1= script can only be called with POST method."
-msgstr ""
+msgstr "Skript =%1= může být volán pouze metodou POST."
 
 #: core/templates/messages.tmpl:155
 msgid "The Administrator has disabled new user registration."
-msgstr ""
+msgstr "Registrace nových uživatelů byla zakázána Administrátorem."
 
 #: core/templates/messages.tmpl:306
 msgid "The activation code %1 is invalid."
@@ -2850,7 +2851,7 @@ msgstr "Zámek na tomto článku vypršel před %1"
 
 #: core/templates/messages.tmpl:93
 msgid "The name of the topic must not be empty."
-msgstr ""
+msgstr "Název článku nesmí být prázdný."
 
 #: core/templates/moveattachment.tmpl:15
 msgid "The new topic chosen must already exist."
@@ -2870,7 +2871,7 @@ msgstr "Požadované pole %1 nebylo vyplněno."
 
 #: core/templates/messages.tmpl:146
 msgid "The selected User System does not support new user registration."
-msgstr ""
+msgstr "Zvolený User System nepodporuje registraci nových uživatelů."
 
 #: core/templates/messages.tmpl:340
 msgid "The topic is in an old format"
@@ -2883,6 +2884,7 @@ msgstr "Hesla, která jste vložil nesouhlasí."
 #: core/templates/messages.tmpl:535
 msgid "The user %1 has already been activated, and should be able to log in."
 msgstr ""
+"Uživatel %1 byl již aktivován a měl by být schopen se přihlásit do systému."
 
 #: core/templates/messages.tmpl:391
 msgid "There are problems with renaming this web:"
@@ -2899,6 +2901,8 @@ msgid ""
 "There is a risk that someone may be trying to use your identity to change "
 "content on %1 without your knowledge."
 msgstr ""
+"Existuje riziko, že někdo se může pokoušet změnit obsah %1 bez vašeho vědomí "
+"a navíc za použití vaší identity."
 
 #: core/templates/messages.tmpl:343
 msgid "There should be a line that includes %1, look for %2 (or %3)"
@@ -2906,7 +2910,7 @@ msgstr "Měly by zde být řádky, které obsahují %1, hledejte %2 (nebo%3)"
 
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:6
 msgid "This Foswiki does _not_ support new User Registration"
-msgstr ""
+msgstr "Tato Foswiki _nepodporuje registraci nových uživatelů."
 
 #: core/templates/messages.tmpl:350
 msgid "This can be automatically upgraded by:"
@@ -3338,7 +3342,7 @@ msgstr ""
 
 #: core/templates/messages.tmpl:243
 msgid "While attempting to email <noautolink>%1</noautolink>."
-msgstr ""
+msgstr "Zatímco přistupuji k emailu <noautolink>%1</noautolink>."
 
 #: core/templates/attachtables.tmpl:37 core/templates/attachtables.tmpl:4
 msgid "Who"
@@ -3501,11 +3505,11 @@ msgstr ""
 
 #: core/templates/oopsmore.tmpl:22
 msgid "You will be able to review the copied topic before saving"
-msgstr ""
+msgstr "Před uložením si budete moci prohlédnout náhled kopírovaného článku."
 
 #: core/templates/oopsmore.tmpl:120
 msgid "You will be able to review the topic before saving it to a new revision"
-msgstr ""
+msgstr "Před uložením nové verze článku si budete moci prohlédnout jeho náhled."
 
 #: core/templates/messages.tmpl:355
 msgid "You will probably have to ask your administrator, %1, to do this."
@@ -3656,7 +3660,7 @@ msgstr "zatržení u odkazovaných článků"
 
 #: core/templates/messages.tmpl:417
 msgid "don't forget to check your Topic Settings"
-msgstr ""
+msgstr "nezapomeň zkontrolovat nastavení článku (Topic Settings)"
 
 #: PatternSkin/templates/formtables.pattern.tmpl:28
 #: core/templates/formtables.tmpl:21
@@ -3760,7 +3764,7 @@ msgstr ""
 
 #: core/templates/viewtopicactionbuttons.tmpl:7
 msgid "title='Edit this topic text' accesskey='e'>&Edit"
-msgstr ""
+msgstr "title='Edituj text tohoto článku' accesskey='e'>&Edit"
 
 #: core/templates/viewtopicactionbuttons.tmpl:21
 msgid "title='Printable version of this topic' accesskey='p'>&Print version"
