--- a/core/locale/cs.po
+++ b/core/locale/cs.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: Foswiki $Id\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2009-07-01 20:06+0200\n"
+"PO-Revision-Date: 2009-07-02 14:54+0200\n"
 "Last-Translator: Milan Mašek <milan.m.masek@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: cs\n"
@@ -109,7 +109,7 @@ msgstr "%1 byl zaregistrován s e-mailem %2"
 
 #: core/templates/validate.tmpl:16
 msgid "%1 has received a suspicious change request from your browser."
-msgstr ""
+msgstr "%1 obdržel podezřelý požadavek na změnu z vašeho prohlížeče."
 
 #: core/templates/messages.tmpl:23
 msgid "%1 home"
@@ -144,7 +144,6 @@ msgid "%1 is the default topic for deleted attachments."
 msgstr "%1 je přednastaveným článkem pro smazané přílohy."
 
 #: TopicUserMappingContrib/data/System/NewUserTemplate.txt:87
-#, fuzzy
 msgid "%1 lists all Foswiki user tools"
 msgstr "%1 ukáže všechny uživatelské nástroje"
 
@@ -174,13 +173,12 @@ msgid "%1 topic does not exist"
 msgstr "článek %1 neexistuje"
 
 #: core/templates/registerfailedremoved.tmpl:12
-#, fuzzy
 msgid "%1 tried to register with e-mail %2"
-msgstr "%1 byl zaregistrován s e-mailem %2"
+msgstr "%1 se pokusil o registraci s e-mailem %2"
 
 #: PatternSkin/templates/foswiki.pattern.tmpl:9
 msgid "&Cancel"
-msgstr "Pře&rušit"
+msgstr "&Cancel (ponechej beze změny)"
 
 #: PatternSkin/data/Main/PatternSkinUserViewTemplate.txt:14
 msgid "&Edit text"
@@ -192,20 +190,19 @@ msgstr "Historie"
 
 #: core/templates/messages.tmpl:273
 msgid "'%1' is not a valid %2 "
-msgstr ""
+msgstr "'%1' není platné %2 "
 
 #: core/data/System/WebTopicCreator.txt:2
-#, fuzzy
 msgid "'Create New Topic' page has moved"
-msgstr "Nový článek v %1"
+msgstr "'Create New Topic' stránka byla přesunuta"
 
 #: core/templates/login.tmpl:12
 msgid "(%1 login)"
-msgstr ""
+msgstr "(%1 přihlášení)"
 
 #: core/templates/validate.tmpl:6
 msgid "(%1 validation)"
-msgstr ""
+msgstr "(%1 validace)"
 
 #: PatternSkin/templates/rdiff.pattern.tmpl:6 core/templates/rdiff.tmpl:4
 msgid "(%1 vs. %2)"
@@ -224,9 +221,8 @@ msgid "(Use a topic name in System.WikiNotation)"
 msgstr "Použijte jméno článku ve tvaru System.JmenoClanku"
 
 #: core/templates/oopsaccessdenied.tmpl:4
-#, fuzzy
 msgid "(access denied)"
-msgstr "Přístup odepřen"
+msgstr "(přístup odepřen)"
 
 #: PatternSkin/templates/attach.pattern.tmpl:8 core/templates/attachnew.tmpl:2
 msgid "(attach)"
@@ -241,9 +237,8 @@ msgid "(backlinks in all Webs)"
 msgstr "(zpětné odkazy ve všech Webech)"
 
 #: core/templates/searchbookview.tmpl:3
-#, fuzzy
 msgid "(book view)"
-msgstr "Nefo&rmátovaně"
+msgstr "(náhled ve stylu kniha)"
 
 #: core/templates/changeform.tmpl:3
 msgid "(change form)"
@@ -287,9 +282,8 @@ msgid "(identifies you to others) WikiName:"
 msgstr "(identifikuje Vás ostatním) WikiName:"
 
 #: core/templates/login.tmpl:4
-#, fuzzy
 msgid "(login)"
-msgstr "(nic)"
+msgstr "(login)"
 
 #: core/templates/oopsmore.tmpl:3
 msgid "(more)"
@@ -321,9 +315,8 @@ msgid "(otherwise search %1 Web only)"
 msgstr "(jinak hledá pouze v %1 webu)"
 
 #: PatternSkin/templates/view.pattern.tmpl:45
-#, fuzzy
 msgid "(raw view)"
-msgstr "Nefo&rmátovaně"
+msgstr "(surový náhled)"
 
 #: core/templates/oopsmore.tmpl:36 core/templates/oopsmore.tmpl:45
 msgid "(recommended)"
@@ -335,19 +328,16 @@ msgid "(rename)"
 msgstr "(přejmenovat)"
 
 #: PatternSkin/templates/view.pattern.tmpl:45
-#, fuzzy
 msgid "(revision %1)"
-msgstr "Revize"
+msgstr "(revize %1)"
 
 #: core/templates/oopssaveerr.tmpl:7
-#, fuzzy
 msgid "(save error)"
-msgstr "Chyba uložení článku"
+msgstr "(chyba uložení)"
 
 #: core/templates/searchformat.tmpl:3
-#, fuzzy
 msgid "(search result)"
-msgstr "(výsledky hledání)"
+msgstr "(výsledek hledání)"
 
 #: PatternSkin/templates/search.pattern.tmpl:9 core/templates/search.tmpl:3
 #: core/templates/search.tmpl:6
@@ -386,7 +376,6 @@ msgid "*Formatting help:*"
 msgstr "*Nápověda k formátování:*"
 
 #: TopicUserMappingContrib/data/System/UserRegistration.txt:15
-#, fuzzy
 msgid ""
 "*Important:* the information provided in this form will be stored in a "
 "database on the Foswiki server. This database is accessible to anyone who "
@@ -398,12 +387,12 @@ msgid ""
 "server before registering."
 msgstr ""
 "*Důležité:* informace poskytované v tomto formuláři budou uloženy v databázi "
-"na TWiki serveru. Tato databáze je přístupná komukoli kdo může přistoupit k "
-"serveru přes web (ačkoli hesla budou zašifrována a emailovéadresy budou "
+"na Foswiki serveru. Tato databáze je přístupná komukoli kdo může přistoupit "
+"k serveru přes web (ačkoli hesla budou zašifrována a emailovéadresy budou "
 "pozměněny kvůli spamování). Vaše země nebo země, kde je server může mít "
-"zákony týkající se administrace takové databáze. Pokud máte pochybnosti,"
-"kontaktujte prosím %1 kvůli detailům, týkajících se ochrany dat na tomto "
-"serverupřed registrací."
+"zákony týkající se administrace takové databáze. Pokud máte "
+"pochybnosti,kontaktujte prosím %1 kvůli detailům, týkajících se ochrany dat "
+"na tomto serveru před registrací."
 
 #: core/templates/attachagain.tmpl:19
 msgid ""
@@ -414,16 +403,13 @@ msgstr ""
 "ten, který bude změněn nebo přidán."
 
 #: core/templates/attachagain.tmpl:17
-#, fuzzy
 msgid ""
 "*Properties:* The comment and visibility (i.e. is attachment hidden) can be "
 "changed without uploading a file by pressing \"Change Properties only\"; see "
 "%1."
 msgstr ""
 "*Vlastnosti:* Komentář a viditelnost (t.j. jestli je přiloha skryta) může "
-"být změněna bez nahrání přilohy stiskem \"Změň pouze vlastnosti\"; viz <a "
-"target=\"HiddenAttachment\" onclick=\"return launchWindow('%"
-"1','HiddenAttachment')\" href=\"%2\" rel='nofollow'>Skryté přílohy</a>."
+"být změněna bez nahrání přilohy stiskem \"Změň pouze vlastnosti\"; viz %1."
 
 #: core/data/System/WikiSyntaxSummary.txt:9
 msgid "*bold* put word/phrase in asterisks: =<nop>*your phrase*="
@@ -438,13 +424,12 @@ msgstr ""
 "text="
 
 #: core/data/System/WikiSyntaxSummary.txt:14
-#, fuzzy
 msgid ""
 "*external links* =http://yahoo.com= or =[<nop>[http://yahoo.com/][link to "
 "Yahoo]]="
 msgstr ""
-"*odkaz* použijte jméno: =%1=, =http://www.seznam.com=, nebo =[<nop>[http://"
-"www.seznam.cz/][odkaz na Seznam]]="
+"*externí odkazy* =http://www.tmapy.cz= or "
+"=[<nop>[http://www.tmapy.cz/][odkaz na T-MAPY]]="
 
 #: core/data/System/WikiSyntaxSummary.txt:11
 msgid "*headings* 3 dashes, 1 to 6 pluses, 1 space: =---++&&nbsp;Your Heading="
@@ -1476,7 +1461,7 @@ msgstr ""
 
 #: core/data/System/WebSearch.txt:5 core/data/System/WebSearchAdvanced.txt:5
 msgid "Get notified on changes on this search"
-msgstr ""
+msgstr "Nechte se upozornit o změnách tohoto vyhledávání"
 
 #: core/templates/foswiki.tmpl:82
 msgid "Go back"
@@ -1719,6 +1704,8 @@ msgid ""
 "International (8-bit) characters are removed (replaced by US-ASCII "
 "equivalents for Latin-1)"
 msgstr ""
+"Mazinárodní (8-bit) znaky byly odstraněny (nahrazeny US-ASCII ekvivalenty "
+"pro Latin-1)"
 
 #: core/templates/messages.tmpl:305
 msgid "Invalid Activation Code"
