--- a/core/locale/fr.po
+++ b/core/locale/fr.po
@@ -7,13 +7,13 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2009-06-23 13:55+0200\n"
+"PO-Revision-Date: 2009-07-03 12:34+0200\n"
 "Last-Translator: Raul F Rodriguez <RaulFRodriguez10@gmail.com>\n"
 "Language-Team: <fr@li.org>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fr\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Generator: Pootle 1.2.1\n"
 
@@ -3937,8 +3937,8 @@ msgid ""
 msgstr ""
 "pour pouvoir réinitialiser votre mot de passe, vous *devez* avoir fourni au "
 "moins une adresse e-mail valide lors de votre inscription. Si aucune des "
-"adresses que vous avez fourni à ce moment-là n'est valide, et que vous avez "
-"oublié votre mot de passe, contactez %1."
+"adresses que vous avez fournies à ce moment-là n'est valide, et que vous "
+"avez oublié votre mot de passe, contactez %1."
 
 #~ msgid "Edit table"
 #~ msgstr "Modifier le tableau"
