Item1769: Uncommitted translations in the last 4 hours
git-svn-id: http://svn.foswiki.org/branches/Release01x00@4436 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/fr.po
+++ b/core/locale/fr.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2009-07-03 12:34+0200\n"
+"PO-Revision-Date: 2009-07-05 02:07+0200\n"
 "Last-Translator: Raul F Rodriguez <RaulFRodriguez10@gmail.com>\n"
 "Language-Team: <fr@li.org>\n"
 "Language: fr\n"
@@ -3856,7 +3856,8 @@ msgstr "title='Version imprimable de cette page' accesskey='p'>Im&primer"
 #: core/templates/viewtopicactionbuttons.tmpl:9
 msgid "title='Raw Edit this topic text' accesskey='w'>Ra&w edit"
 msgstr ""
-"title='Modifier le code source de cette page' accesskey='w'>Modifier (&w)"
+"title='Modifier le code source de cette page' accesskey='w'>Modifier source "
+"(&w)"
 
 #: core/templates/viewtopicactionbuttons.tmpl:28
 msgid ""
