Item1791: add upgrading of distributed topics and attachments - use exclude file on any files that have a ,v
git-svn-id: http://svn.foswiki.org/trunk@4462 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/changelog
+++ b/core/tools/pkg/debian/changelog
@@ -1,5 +1,7 @@
 foswiki (1.0.6-1) unstable; urgency=high
 
+  * package now upgrades distributed topics and attachments, by looking for
+    ,v files and skipping those. (no merging)
   * Upgrade to foswiki 1.0.6 - resolves Security Alert CVE-2009-1434
     This version introduces a major enhancement in security against Cross-Site Request Forgery
 
