--- a/core/locale/cs.po
+++ b/core/locale/cs.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: Foswiki $Id\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2009-07-07 14:57+0200\n"
+"PO-Revision-Date: 2009-07-08 11:21+0200\n"
 "Last-Translator: Milan Mašek <milan.m.masek@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: cs\n"
@@ -766,9 +766,8 @@ msgid "Base web %1 is missing or does not exist"
 msgstr "Základní web %1 není dostupný nebo neexistuje"
 
 #: core/lib/Foswiki/OopsException.pm:41
-#, fuzzy
 msgid "Bathing problem"
-msgstr "Plážový problém"
+msgstr "Plážový problém (just a test string within the documentation)"
 
 #: core/data/System/WebSearch.txt:32 core/data/System/WebSearchAdvanced.txt:40
 msgid "Both body and title"
@@ -2159,9 +2158,8 @@ msgid "Press OK to confirm that this change was intentional."
 msgstr "Stiskněte OK jako potvrzení že tato změna byla mezinárodní."
 
 #: core/lib/Foswiki/OopsException.pm:42
-#, fuzzy
 msgid "Problem filling bath"
-msgstr "Problém vyplňování lázně"
+msgstr "Problém vyplňování lázně (just a test string within the documentation)"
 
 #: PatternSkin/templates/attach.pattern.tmpl:53
 msgid "Properties"
