--- a/core/locale/fr.po
+++ b/core/locale/fr.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2009-07-12 03:56+0200\n"
+"PO-Revision-Date: 2009-07-17 14:01+0200\n"
 "Last-Translator: Raul F Rodriguez <RaulFRodriguez10@gmail.com>\n"
 "Language-Team: <fr@li.org>\n"
 "Language: fr\n"
@@ -1475,7 +1475,7 @@ msgstr ""
 
 #: core/data/System/WebSearch.txt:5 core/data/System/WebSearchAdvanced.txt:5
 msgid "Get notified on changes on this search"
-msgstr "Recevoir un email lorsque le résultat de cette recherche change"
+msgstr "Etre informé lorsque le résultat de cette recherche change"
 
 #: core/templates/foswiki.tmpl:82
 msgid "Go back"
