Item1791: fix fresh installation - that log dir doesn't exist on initially
git-svn-id: http://svn.foswiki.org/trunk@4503 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/changelog
+++ b/core/tools/pkg/debian/changelog
@@ -1,3 +1,9 @@
+foswiki (1.0.6-2) unstable; urgency=high
+
+  * fix fresh installation :/
+
+ -- Sven Dowideit <SvenDowideit@fosiki.com>  Sat, 18 Jun 2009 09:53:40 +0100
+
 foswiki (1.0.6-1) unstable; urgency=high
 
   * package now upgrades distributed topics and attachments, by looking for
