--- a/core/tools/pkg/debian/changelog
+++ b/core/tools/pkg/debian/changelog
@@ -1,3 +1,9 @@
+foswiki (1.0.6-3) unstable; urgency=high
+
+  * fix bad URL generation when logging on from / and using ShorterUrls
+
+ -- Sven Dowideit <SvenDowideit@fosiki.com>  Sat, 11 Sep 2009 09:53:40 +0100
+
 foswiki (1.0.6-2) unstable; urgency=high
 
   * fix fresh installation :/
