Item1830: add OlivierRaginel's patch for validation nonce's
git-svn-id: http://svn.foswiki.org/trunk@4770 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/changelog
+++ b/core/tools/pkg/debian/changelog
@@ -1,6 +1,7 @@
 foswiki (1.0.6-3) unstable; urgency=high
 
-  * fix bad URL generation when logging on from / and using ShorterUrls
+  * fix bad URL generation when logging on from / and using ShorterUrls Item1766
+  * fix for problems with validation - Item1830
 
  -- Sven Dowideit <SvenDowideit@fosiki.com>  Sat, 11 Sep 2009 09:53:40 +0100
 
